Removed some special case configuration.