@@ -6,10 +6,3 @@ dependencies {
 }
 
 useTestFixtures()
-
-integTestTasks.all {
-    jvmArgs '-XX:MaxPermSize=256m'
-    if (isWindows && systemProperties['org.gradle.integtest.executer'] == "embedded") {
-        systemProperties['org.gradle.integtest.executer'] =  "forking"
-    }
-}
